# picorandr

./: CMakeLists.txt  README  README.md
include/: drm_misc.h  klog_misc.h  pci_misc.h
src/: drm_misc.c  klog_misc.c  main.c  pci_misc.c
